# sqlui-native

./: .env  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  CONTRIBUTING.md  DEV.md  LICENSE.md  README.md  _config.yml  build.sh  clean.js  clean.sh  config-overrides.js  dist.sh  docker-compose.yml  guides.md  index.html  installation.md  jest.config.js  jest.setup.js  main.js  main.ts  mocked-server.ts  package-lock.json  package.json  playwright.config.ts  playwright.smoke.config.ts  release.json  tsconfig-electron.json  tsconfig-mocked-server.json  tsconfig-server.json  tsconfig.base.json  tsconfig.json  vite-electron.config.ts  vite-mocked-server.config.ts  vite.config.ts  vite.electron.config.ts  (+9 more)
.claude/: settings.json
.claude/skills/: release-beta.md  release-official.md
.github/: FUNDING.yml  dependabot.yml  pr-build.yml
__tests__/: BaseDataAdapter.spec.ts  MongoDBDataAdapter.spec.ts  RelationalDataAdapter.spec.ts  Scripts.spec.ts
_layouts/: MongoDataAdapter.spec.ts  default.electron.html  default.html
commons/: DataAdapterFactory.ts  EndpointUtils.ts  Endpoints.ts  EngineFactory.ts  PersistentStorage.ts  RelationalDatabaseEngine.ts
e2e/: e2e.spec.ts  github-pages-links.spec.ts
electron/: main.ts  mocked-server.ts
mocked-server/: index.ts
public/: index.html  logo256.icns  main.ts  manifest.json  renderer.js
scripts/: afterPack.js  build.sh  clean.js  common.js  common.sh  dist.sh  download-node.js  download-node.sh  format.sh  inline-build.js  postbuild.js  prebuild.js  predist.js  prepare-sidecar.js  test.sh
src/: App.scss  App.tsx  App.tsx.bak  assets.d.ts  electronRenderer.js  icon-paint-net.pdn  index.html  index.tsx  main.ts  mocked-server.ts  react-app-env.d.ts  renderer.js  reportWebVitals.ts  tauri-packaging.spec.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: package.json
src-tauri/src/: cache.rs  error.rs  lib.rs  main.rs  menu.rs  types.rs
src-tauri/src/adapters/: aztable_adapter.rs  cassandra_adapter.rs  cosmosdb_adapter.rs  graphql_adapter.rs  mod.rs  mongodb_adapter.rs  mssql_adapter.rs  mysql_adapter.rs  postgres_adapter.rs  redis_adapter.rs  restapi_adapter.rs  salesforce_adapter.rs  sqlite_adapter.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/tests/: adapter_integration.rs
typings/: index.d.ts  index.ts  react-simple-resizer.d.ts  react-table-config.d.ts
(+625 files in other folders)
