[package]
name = "sqlui-native"
version = "2.0.0"
edition = "2021"
description = "A cross-platform desktop SQL/NoSQL database client"
authors = ["Sy Le"]
license = "MIT"

[lib]
name = "sqlui_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
